--- a/src/style.css
+++ b/src/style.css
@@ -241,6 +241,9 @@ nav a:hover {
   background-position: top center;
   background-attachment: fixed;
 }
+.text__gallery {
+  padding-top: 600px;
+}
 
 .contacts {
   margin-bottom: 4rem;
@@ -261,9 +264,9 @@ nav a:hover {
   .container {
     max-width: 960px;
   }
-.nav-btn {
-  display: none;
-}
+  .nav-btn {
+    display: none;
+  }
   .banner {
     height: 600px;
 
